--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,6 @@
 body {
     background-color: #F8F8F8;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
 }
 
 header {
@@ -7,16 +8,83 @@ header {
     width: 800px;
     margin-left: calc(50% - 400px);
     margin-right: calc(50% - 400px);
-    background-color: aqua;
+     
+}
+
+body > header > img {
+    display:inline-block;
+    height: 50px;
+    float:left
+    
+} 
+
+header > nav {
+    display:inline-block;
+    float: right;
+    margin-top: 6px;
     
 }
 
+nav > a {
+    display:inline-block;
+    float: left;
+    line-height: 20px;
+    font-size: 18px;
+    border: 4px solid transparent;
+    border-radius: 19px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-decoration: none;
+    color: #BBBBBB;
+}
 
-main {
+nav > a:last-of-type {
+    border-color: #BBBBBB;
+    text-transform: uppercase;
+    margin-left: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+body > main {
     display: inline-block;
     width: 800px;
     margin-left: calc(50% - 400px);
     margin-right: calc(50% - 400px);
-    background-color: pink;
+    
+}
+
+main > div {
+    display:inline-block;
+    width: 30%;
+    float: left;
+    margin-top: 60px;
+    margin-left: 2%;
+    margin-right: 2%;
+    
+
+}
+div > h1 {
+    display:inline-block;
+    width: 100%;
+    margin: 0%;
+    font-size: 80px;
+    line-height: 80px;
+
+}
+div > p {
+    display:inline-block;
+    width: 100%;
+    margin: 0%;
+    font-size: 24px;
+    line-height: 30px;
+
+}
+main > img {
+    display:inline-block;
+    width: 46%;
+    float: right;
+    margin-right: 2%;
     
 }
